Changelog
=========

2.0b2 - unreleased
------------------

* Fixed patch of LazyCat's `__add__` method to patch the base class instead, as
  the method was moved.
  [hannosch]

* Updated test config to Solr 3.1, which should be supported but hasn't seen
  extensive production use.
  [hannosch]

* Avoid using the deprecated `five:implements` directive.
  [hannosch]

2.0b1 - 2011-04-06
------------------

* Rewrite the `isSimpleSearch` function to use a less complex regular
  expression, which doesn't have O(2**n) scaling properties.
  [hannosch]

* Use the standard libraries doctest module.
  [hannosch]

* Fix the pretty_title_or_id method from PloneFlare; the implementation
  was broken, now delegates to the standard Plone implementation.
  [mj]


2.0a3 - 2011-01-26
------------------

* In `solr_dump_catalog` correctly handle boolean values and empty text fields.
  [hannosch]


2.0a2 - 2011-01-10
------------------

* Provide a dummy request in the `solr_dump_catalog` command.
  [hannosch]


2.0a1 - 2011-01-10
------------------

* Handle utf-8 encoded data correctly in `utils.isWildCard`.
  [hannosch]

* Gracefully handle exceptions raised during index data retrieval.
  [tom_gross, hannosch]

* Added `zopectl.command` entry points for three new scripts.
  `solr_clear_index` will remove all entries from Solr. `solr_dump_catalog`
  will efficiently dump the content of the catalog onto the filesystem and
  `solr_import_dump` will import the dump into Solr. This can be used to
  bootstrap an empty Solr index or update it when the boost logic has changed.
  All scripts will either take the first Plone site found in the database or
  accept an unnamed command line argument to specify the id. The Solr server
  needs to be running and the connection info needs to be configured in the
  Plone site. Example use: ``bin/instance solr_dump_catalog Plone``. In this
  example the data would be stored in `var/instance/solr_dump_plone`. The data