@@ -1,15 +1,21 @@
 from zope.component import queryAdapter
 from DateTime import DateTime
-from Products.ZCatalog.Lazy import Lazy
-from Products.ZCatalog.Lazy import LazyCat
 from Products.CMFCore.permissions import AccessInactivePortalContent
 from Products.CMFCore.utils import _getAuthenticatedUser
 from Products.CMFCore.utils import _checkPermission
 from Products.CMFPlone.CatalogTool import CatalogTool
+from Products.ZCatalog.Lazy import Lazy
+from Products.ZCatalog.Lazy import LazyCat
 
 from collective.solr.interfaces import ISearchDispatcher
 from collective.indexing.utils import autoFlushQueue
 from collective.solr.parser import SolrResponse
+
+HAS_EXPCAT = True
+try:
+    from experimental.catalogqueryplan import lazy
+except ImportError:
+    HAS_EXPCAT = False
 
 
 def searchResults(self, REQUEST=None, **kw):
@@ -39,6 +45,13 @@ def patchCatalogTool():
     CatalogTool.__call__ = searchResults
 
 
+if HAS_EXPCAT:
+    def lazyExpCatAdd(self, other):
+        if isinstance(other, SolrResponse):
+            other = lazy.LazyCat([list(other)])
+        return lazy.Lazy._solr_original__add__(self, other)
+
+
 def lazyAdd(self, other):
     if isinstance(other, SolrResponse):
         other = LazyCat([list(other)])
@@ -50,3 +63,6 @@ def patchLazy():
         concatenate `Lazy` and `SolrResponse` instances """
     Lazy._solr_original__add__ = Lazy.__add__
     Lazy.__add__ = lazyAdd
+    if HAS_EXPCAT:
+        lazy.Lazy._solr_original__add__ = lazy.Lazy.__add__
+        lazy.Lazy.__add__ = lazyExpCatAdd
